--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Concert</title>
-    <link rel="stylesheet" href="styles/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <header>
@@ -15,6 +15,6 @@
         <div id="products" class="product-grid"></div>
     </main>
 
-    <script src="styles/js/app.js"></script>
+    <script src="js/app.js"></script>
 </body>
 </html>
