--- a/product.html
+++ b/product.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Active Subwoofer PRO 18”</title>
-  <link rel="stylesheet" href="styles/css/style.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
